# origami

./: .gitignore  Cargo.toml  LICENSE  README.md  main.py  pytest.ini  requirements.txt
assets/: build_schema.json
assets/origami/: origami.toml
docs/: json_schema.md
src/: build_classes.py  build_loader.py  build_loader.rs  cli.py  conflict_classes.py  datastructures.rs  error.rs  exceptions.py  health_classes.py  main.rs  origami_config.py  repo_manager.py  rice.py  rice_graph.py
src/component/: __init__.py  component.py
src/component/checkers/: __init__.py  dependency_checker.py  health_checker.py  program_checker.py  version_checker.py
src/component/installers/: __init__.py  font_installer.py  installer.py  script_installer.py
tests/: conftest.py  test_build_loader.py  test_component.py  test_dependency_checker.py  test_font_installer.py  test_installer.py  test_origami_config.py  test_rice_graph.py  test_rice_integration.py  test_version_checker_and_repo_manager.py
tests/fixtures/: config.toml  origami_conflict_a.json  origami_conflict_b.json  origami_full.json  origami_hardlink.json  origami_invalid_bad_provider.json  origami_invalid_bad_version.json  origami_invalid_missing_required.json  origami_macos.json  origami_minimal.json  origami_termux.json  origami_with_hooks.json
