[package]
name = "origami-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
jsonschema = "0.46.0"
petgraph = { version = "0.8.3", default-features = false, features = ["graphmap"] }
semver = "1.0.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
